src/test/ui/feature-gate-dyn-trait.stderr
error[E0658]: `dyn Trait` syntax is unstable (see issue #44662)
  --> $DIR/feature-gate-dyn-trait.rs:12:14
   |
12 | type A = Box<dyn Trait>; //~ ERROR `dyn Trait` syntax is unstable
   |              ^^^^^^^^^
   |
   = help: add #![feature(dyn_trait)] to the crate attributes to enable

error: aborting due to previous error

